@@ -3,7 +3,8 @@ crystal-facet-uml (1.23.2) UNRELEASED; urgency=medium
   [ Andreas Warnke ]
   * XMI(TM) export reflects containment-hierarcy of elements
   * no arrow tip at communication path
-  * internal: Messages to user user are typesafe for their parameters
+  * export shows statistics on diagrams or classifiers
+  * internal: messages to user user are typesafe for their parameters
 
  -- Andreas Warnke <cfu@andreaswarnke.de>  Sun, 27 Sep 2020 11:30:00 +0200
 
